--- a/posSystem/Views/Admin/AdminEdit.cshtml
+++ b/posSystem/Views/Admin/AdminEdit.cshtml
@@ -1,49 +1,31 @@
-﻿@model AdminModel;
-@{
+﻿@model AdminModel
 
-}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow">
+                <div class="card-body">
+                    <h5 class="card-title mb-4">Update Admin Account</h5>
 
-<div class="container">
-    <div class="card o-hidden border-0 shadow-lg col-lg-7 mx-auto">
-        <div class="card-body p-7">
-            <!-- Nested Row within Card Body -->
-            <div>
-                <div class="col-lg-10 mx-auto">
-                    <!-- Centering the column horizontally -->
-                    <div class="p-9">
-                        <div class="text-center mb-4">
-                            <h1 class="h4 text-gray-900">Create an Account!</h1>
+                    <form class="user">
+                        <div class="mb-3">
+                            <label for="adminName" class="form-label">Admin Name</label>
+                            <input type="text" class="form-control" id="adminName" placeholder="Enter admin name" value="@Model.adminName">
                         </div>
-                        <form class="user">
-                            <div class="form-group">
-                                <input type="text" class="form-control form-control-user" id="adminName" placeholder="Admin Name" value="@Model.adminName">
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control form-control-user" id="adminEmail" placeholder="Email Address" value="@Model.adminEmail">
-                            </div>
-                            <div class="form-group">
-                                <span id="emailFeedback"></span>
-                            </div>
-@*                             <div class="form-group row">
-                                <div class="col-sm-6">
-                                    <input type="password" class="form-control form-control-user" id="adminPassword" placeholder="Password" oninput="validatePassword()">
-                                </div>
-                                <div class="col-sm-6">
-                                    <input type="password" class="form-control form-control-user" id="confirmPassword" placeholder="Repeat Password" oninput="validatePassword()">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <span style="margin-bottom: 1em; color: red;" id="error-message"></span>
-                            </div> *@
-                            <hr>
-                            <div class="text-center">
-                                <button type="button" class="btn btn-primary btn-user btn-block" id="btnUpdate">
-                                    Update Admin Account
-                                </button>
-                            </div>
-                            <hr>
-                        </form>
-                    </div>
+
+                        <div class="mb-3">
+                            <label for="adminEmail" class="form-label">Email Address</label>
+                            <input type="email" class="form-control" id="adminEmail" placeholder="Enter email address" value="@Model.adminEmail">
+                            <span id="emailFeedback"></span>
+                        </div>
+
+                        <div class="d-grid gap-2">
+                            <button type="button" class="btn btn-success" id="btnUpdate">
+                                Update Admin Account
+                            </button>
+                            <a href="/Admin" class="btn btn-dark mt-2">Back</a>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -52,7 +34,6 @@
 
 @section scripts {
     <script>
-
         $(document).ready(function () {
             $('#adminEmail').on('input', function () {
                 let adminEmail = $('#adminEmail').val();
@@ -80,7 +61,7 @@
             });
 
             $('#btnUpdate').click(function () {
-                let id = '@Model.id.ToString()';
+                let id = '@Model.id';
                 let adminName = $('#adminName').val();
                 let adminEmail = $('#adminEmail').val();
 
@@ -100,7 +81,7 @@
                         if (result.IsSuccess) {
                             Swal.fire({
                                 title: "Success!",
-                                text: result.responeMessage,
+                                text: result.responseMessage,
                                 icon: "success",
                             }).then((result) => {
                                 if (result.isConfirmed) {
@@ -110,7 +91,7 @@
                         } else {
                             Swal.fire({
                                 title: "Error!",
-                                text: result.responeMessage,
+                                text: result.responseMessage,
                                 icon: "error"
                             });
                         }
