--- a/posSystem/Views/Category/CategoryCreate.cshtml
+++ b/posSystem/Views/Category/CategoryCreate.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    
+﻿@model CategoryModel
+@{
+
 }
 
 <div class="container mt-5">
@@ -17,6 +18,7 @@
                     <div class="mb-3">
                         <label for="catCode" class="form-label">Category Code</label>
                         <input type="text" class="form-control" id="catCode" name="catCode" placeholder="Enter category code">
+                        <span asp-validation-for="catCode" class="text-danger"></span>
                     </div>
 
                     <div class="mb-3">
@@ -24,13 +26,8 @@
                         <textarea class="form-control" id="catDescription" name="catDescription" rows="3" placeholder="Enter category description"></textarea>
                     </div>
 
-                    <div class="mb-3">
-                        <label for="creatorName" class="form-label">Creator Name</label>
-                        <input type="text" class="form-control" id="creatorName" name="creatorName" placeholder="Enter creator name">
-                    </div>
-
                     <div class="d-grid gap-2">
-                        <button type="button" id="btnSaveCategory" class="btn btn-success">Save Category</button>
+                        <button type="button" id="btnSave" class="btn btn-success">Save Category</button>
                         <a href="/Category" class="btn btn-dark mt-2">Back</a>
                     </div>
                 </div>
@@ -40,18 +37,87 @@
 </div>
 
 @section scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
     <script>
-        $('#btnSaveCategory').click(function () {
+        $('#btnSave').click(function () {
             let catName = $('#catName').val();
             let catCode = $('#catCode').val();
             let catDescription = $('#catDescription').val();
-            let creatorName = $('#creatorName').val();
+
+            let _reqModel = {
+                catName: catName,
+                catCode: catCode,
+                catDescription: catDescription
+            };
+
+            $.ajax({
+                url: "/Category/Save",
+                data: { categoryModel: _reqModel },
+                type: "POST",
+                dataType: "json",
+                success: function (result) {
+                    console.log(result);
+                    if (result.IsSuccess) {
+                        let timerInterval;
+                        Swal.fire({
+                            title: "Saving...",
+                            html: "Please wait, saving in <b></b> milliseconds.",
+                            timer: 1000,
+                            timerProgressBar: true,
+                            didOpen: () => {
+                                Swal.showLoading();
+                                const timer = Swal.getHtmlContainer().querySelector("b");
+                                timerInterval = setInterval(() => {
+                                    timer.textContent = Swal.getTimerLeft();
+                                }, 100);
+                            },
+                            willClose: () => {
+                                clearInterval(timerInterval);
+                            }
+                        }).then((result) => {
+                            if (result.dismiss === Swal.DismissReason.timer) {
+                                Swal.fire({
+                                    title: "Success!",
+                                    text: result.responseMessage,
+                                    icon: "success",
+                                }).then((result) => {
+                                    if (result.isConfirmed) {
+                                        location.href = "/Category";
+                                    }
+                                });
+                            }
+                        });
+                    }
+                    else {
+                        Swal.fire({
+                            title: "Error!",
+                            text: result.responseMessage,
+                            icon: "error"
+                        });
+                    }
+                },
+                error: function (errormessage) {
+                    console.log(errormessage.responseText);
+                }
+            });
+        });
+    </script>
+}
+
+
+@* @section scripts {
+    <script>
+        $('#btnSave').click(function () {
+            let catName = $('#catName').val();
+            let catCode = $('#catCode').val();
+            let catDescription = $('#catDescription').val();
 
             let _reqModel = {
                 catName: catName,
                 catCode: catCode,
                 catDescription: catDescription,
-                creatorName: creatorName
             };
 
             $.ajax({
@@ -86,4 +152,4 @@
             });
         });
     </script>
-}
+} *@
